# shiftpicdate

./: .drone.yml  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ccpp.yml
